Dinamic render to make the app more responsive on mobile

--- a/client/templates/custom_view.html
+++ b/client/templates/custom_view.html
@@ -4,7 +4,7 @@
       {{> courses_accordion}}
     {{else}}
       {{#if isParent}}
-        {{> students_accordion}}
+        {{> dependants_accordion}}
       {{else}}
         {{> subjects_accordion course_id=user.course_id}}
       {{/if}}
