--- a/client/templates/custom_view/accordions/courses_accordion.html
+++ b/client/templates/custom_view/accordions/courses_accordion.html
@@ -2,7 +2,10 @@
   <div class='content'>
     <div class="collection" style="margin-left: 1rem;margin-right: 1rem;">
       {{#each courses}}
-        <a href="/clases/{{spacesForUnderscores name}}" class="collection-item push-right navigate-right">{{name}}</a>
+        <a href="/clases/{{spacesForUnderscores name}}" class="collection-item push-right navigate-right">
+          <i class="mdi-action-account-balance"></i>{{name}}
+          <div class='icon icon-right-nav right'></div>
+        </a>
       {{/each}}
     </div>
   </div>
