Set font back to Roboto

--- a/client/css/general.css
+++ b/client/css/general.css
@@ -1,3 +1,8 @@
+body {
+  /* transitions plugin changes the font */
+  font-family: "Roboto", sans-serif;
+}
+
 .student-detail-panel span {
   text-decoration: underline;
 }
