Add back score cards and subscriptions to subjects route

--- a/client/templates/custom_view/accordions/students_accordion.html
+++ b/client/templates/custom_view/accordions/students_accordion.html
@@ -27,7 +27,7 @@
                 </div>
               </div>
               <div class='col s12 m9'>
-                <!-- {{> score_card student_id=_id}} -->
+                {{> score_card student_id=_id}}
               </div>
             </div>
           </div>
