Changed to my fork on transitions that fixes styles and back button

--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -19,7 +19,7 @@
       <ul class='back-button'>
         {{#if getPreviousPage != ''}}
         <li>
-          <a href="{{pathFor getPreviousPage}}" class="icon icon-left-nav pull-left" velociratchet-transition="left" style='font-size:3rem;line-height:1.4'></a>
+          <a href="{{getPreviousPage}}" class="icon icon-left-nav pull-left" velociratchet-transition="left" style='font-size:3rem;line-height:1.4'></a>
         </li>
         {{/if}}
       </ul>
