--- a/client/templates/custom_view/accordions/subjects_accordion.html
+++ b/client/templates/custom_view/accordions/subjects_accordion.html
@@ -1,7 +1,7 @@
 <template name='subjects_accordion'>
   <div class="collection" style="margin-left: 1rem;margin-right: 1rem;">
     {{#each subjects}}
-      <a href="/clases/{{spacesForUnderscores course.name}}/materias/{{spacesForUnderscores name}}" class="collection-item push-right navigate-right">
+      <a href="{{currentPath}}/materias/{{spacesForUnderscores name}}" class="collection-item push-right navigate-right">
         <i class="mdi-action-class"></i>
         <span>{{name}}</span>
         <div class='icon icon-right-nav right'></div>
