Rename accordions to collections and fix students view

--- a/client/templates/custom_view/collections/courses_collection.html
+++ b/client/templates/custom_view/collections/courses_collection.html
@@ -1,4 +1,4 @@
-<template name='courses_accordion'>
+<template name='courses_collection'>
   <div class='content'>
     <div class="collection" style="margin-left: 1.75rem;margin-right: 1.75rem;">
       {{#each courses}}
