--- a/client/templates/custom_view/collections/dependants_collection.html
+++ b/client/templates/custom_view/collections/dependants_collection.html
@@ -1,4 +1,4 @@
-<template name='dependants_accordion'>
+<template name='dependants_collection'>
   <ul class="collapsible" data-collapsible="expandable">
     {{#each students}}
       <li>
