--- a/client/templates/custom_view/items/subject_item.html
+++ b/client/templates/custom_view/items/subject_item.html
@@ -4,12 +4,12 @@
       <div class="row">
         <div class="col s12">
           <ul class="tabs subjectTabs">
-            {{> tabHeader class='active' href="#exams" id=_id l_label="examenes" s_label="mdi-content-content-paste"}}
-            {{> tabHeader href="#notifications" id=_id l_label="notificaciones" s_label="mdi-action-announcement"}}
-            {{> tabHeader href="#resources" id=_id l_label="Archivos" s_label="mdi-file-file-download"}}
+            {{> tabHeader class='' href="#examenes" l_label="examenes" s_label="mdi-content-content-paste"}}
+            {{> tabHeader href="#notificaciones" l_label="notificaciones" s_label="mdi-action-announcement"}}
+            {{> tabHeader href="#archivos" l_label="Archivos" s_label="mdi-file-file-download"}}
           </ul>
         </div>
-        <div id="exams{{_id}}" class="col s12">
+        <div id="examenes" class="col s12">
           <div class="collection" style="margin-left: 1rem;margin-right: 1rem;">
             {{#each exams _id}}
             <a href="{{currentPath}}/examenes/{{spacesForUnderscores title}}" class="collection-item push-right navigate-right">
@@ -20,8 +20,8 @@
             {{/each}}
           </div>
         </div>
-        <div id="notifications{{_id}}" class="col s12">Notificaciones</div>
-        <div id="resources{{_id}}" class="col s12">
+        <div id="notificaciones" class="col s12">Notificaciones</div>
+        <div id="archivos" class="col s12">
           <div class='row'>
             {{#if adminAllowed}}
               <div class='col s12 m6'>
