--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -24,6 +24,7 @@
         {{/if}}
       </ul>
       <a href="/" class="brand-logo center flow-text">{{main_title}}</a>
+      <a href="#" class="brand-logo right flow-text js-push-button">Enable PN</a>
       <ul id='slide-out' class="side-nav hide-on-large-only right">
         {{> header_links}}
       </ul>
