Chrome push notifications test

--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -24,6 +24,9 @@
         {{/if}}
       </ul>
       <a href="/" class="brand-logo center flow-text">{{main_title}}</a>
+      <div class='right'>
+        {{> push_notification_enabling_button}}
+      </div>
       <ul id='slide-out' class="side-nav hide-on-large-only right">
         {{> header_links}}
       </ul>
